<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5.0"
        android:gravity="center" >

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="70dp"
            android:layout_height="70dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/app_name_aw"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/app_info_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/app_package_name"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/app_info_package_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/app_version_num"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/app_info_version_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>